@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.16-31 (opened October 3, 2009)
 
+	* ordisurf: pushes out limits of convex hull so that contours
+	better cover corners and margins of points.
+
 	* plot.decorana & plot.cca: use linestack() if only one dimension
 	was chosen.
 
